  - Al añadir un albarán a una factura de cliente, se hace scroll al nuevo albarán
  - Corregido undefined en las gráficas de productos
  - Ahora las notas se crean dentro de un año
  - Añadido histórico de pagos con pagaré
  - Eliminado el campo codigo de la edición de productos de cliente
  - Eliminada la columna code de la lista de productos de cliente

# [1.2.2] - 23/05/2021
  - Focus al añadir un producto al albarán de clientes

# [1.2.1] - 02/05/2021
  - Añadido número de facturas trimestrales a la facturación

# [1.2.0] - 18/04/2021
  - Añadida columna con el número de facturas en el listado de clientes
  - Al pulsar intro en el modal de añadir producto al albarán de cliente, se vacía el modal para añadir otro producto

# [1.1.3] - 18/03/2021
  - Al editar los totales de una factura se suma el total

# [1.1.2] - 17/03/2021
  - Ahora se puede editar los datos de las facturas confirmadas

# [1.1.1] - 16/03/2021
  - Cambiado el orden de precio y unidades en el modal de añadir producto a la factura de cliente
  - Cambiado "Kg" por "kg" en unidades por defecto de la factura de cliente
  - Actualización de librerias

# [1.1.0] - 27/02/2021
  - Añadida columna de iva a los productos del proveedor
  - Mejorado el rendimiento de la busqueda en el libro
  - Añadida búsqueda de albaranes por canal
  - Update libraries

# [1.0.1] - 07/02/2021
  - Cambiado el orden de los elementos del menú de navegación

 ## Librerias
  - Actualizado react-scripts de la version 4.0.1 a la 4.0.2
  - Actualizado @babel/core de la version 7.12.10 a la 7.12.13
  - Actualizado @storybook/addon-actions de la version 6.1.15 a la 6.1.17
  - Actualizado @storybook/addon-docs de la version 6.1.15 a la 6.1.17
  - Actualizado @storybook/addon-knobs de la version 6.1.15 a la 6.1.17
  - Actualizado @storybook/addon-links de la version 6.1.15 a la 6.1.17
  - Actualizado @storybook/addos de la version 6.1.15 a la 6.1.17
  - Actualizado @storybook/node-logger de la version 6.1.15 a la 6.1.17