@@ -1,3 +1,4 @@
 export * from './getProducts';
 export * from './createProduct';
 export * from './editProduct';
+export * from './deleteProduct';
