@@ -3,3 +3,4 @@ import { requestActions } from 'utils';
 export const GET_PRODUCTS = requestActions('@products/GET_PRODUCTS');
 export const CREATE_PRODUCTS = requestActions('@products/CREATE_PRODUCTS');
 export const EDIT_PRODUCT = requestActions('@products/EDIT_PRODUCT');
+export const DELETE_PRODUCT = requestActions('@products/DELETE_PRODUCT');
